--- a/WEB/WAR_ROOT/WEB-INF/web.xml
+++ b/WEB/WAR_ROOT/WEB-INF/web.xml
@@ -6,19 +6,33 @@
 	<display-name>swlcg</display-name>
 	<description>swlcg</description>
 
-    <servlet>
-        <servlet-name>Groovy</servlet-name>
-        <servlet-class>groovy.servlet.GroovyServlet</servlet-class>
-    </servlet>
+	<servlet>
+		<servlet-name>Groovy</servlet-name>
+		<servlet-class>groovy.servlet.GroovyServlet</servlet-class>
+	</servlet>
 
-    <servlet-mapping>
-        <servlet-name>Groovy</servlet-name>
-        <url-pattern>*.groovy</url-pattern>
-    </servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Groovy</servlet-name>
+		<url-pattern>*.groovy</url-pattern>
+	</servlet-mapping>
 
-    <welcome-file-list> 
-                <welcome-file>index.html</welcome-file> 
-                <welcome-file>index.jsp</welcome-file> 
-    </welcome-file-list> 
+	<filter>
+		<filter-name>SessionFilter</filter-name>
+		<filter-class>de.oglimmer.bcg.servlet.SessionFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>SessionFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<session-config>
+		<session-timeout>10080</session-timeout>
+	</session-config>
+
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
 
 </web-app>
