--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -64,6 +64,11 @@
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
 			<version>1.5.0-b01</version>
+		</dependency>
+		<dependency>
+		  <groupId>de.oglimmer.utils</groupId>
+		  <artifactId>common-utils</artifactId>
+		  <version>0.3</version>
 		</dependency>
 	</dependencies>
 </project>
