--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,9 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
-			<artifactId>groovy-all</artifactId>
-			<version>2.1.3</version>
+		    <artifactId>groovy-all</artifactId>
+		    <version>2.5.4</version>
+		    <type>pom</type>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -47,7 +48,7 @@
 		<dependency>
 			<groupId>org.codehaus.groovy.modules.http-builder</groupId>
 			<artifactId>http-builder</artifactId>
-			<version>0.6</version>
+			<version>0.7.1</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.codehaus.groovy</groupId>
