--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -1,3 +1,11 @@
 {
-	"db.host": "localhost"
+	"db.protocol": "http",
+	"db.host": "localhost",
+	"db.port": "5984",
+	"db.schema": "swlcg",
+
+	"mail.protocol": "smtp",
+	"mail.host": "localhost",
+	"mail.port": "25",
+	"mail.senderAddress": "no_reply@junta-online.net"
 }
